# libcircuit

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  circuit.pc.in  make.sh
api/: Circuit.h  Component.h  MNACircuit.h  MNAComponent.h  MNASolution.h  Solution.h  Term.h  Unknown.h
lib/: FindEigen3.cmake
src/: test.java  test.py
src/main/: Circuit.cc  Circuit.h  Component.cc  Component.h  Equation.cc  Equation.h  MNA.h  MNA.i  MNACircuit.cc  MNACircuit.h  MNAComponent.cc  MNAComponent.h  MNASolution.cc  MNASolution.h  Makefile  Solution.cc  Solution.h  Term.cc  Term.h  Unknown.cc  Unknown.h  main.cpp
src/main/cpp/: MNAComponent.h  MNASolution.h
test/: Makefile  main  main.c  main.cpp
